Change database connection
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerAppService/Web.config
+++ b/src/DailySoccerSolution/DailySoccerAppService/Web.config
@@ -13,7 +13,7 @@
     <add name="DailySoccerModelContainer" connectionString="metadata=res://*/DAC.EF.DailySoccerModel.csdl|res://*/DAC.EF.DailySoccerModel.ssdl|res://*/DAC.EF.DailySoccerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local)\sqlexpress;initial catalog=DAILYSOCCER_V0090;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
     <!--Production Database-->
-    <!--<add name="DailySoccerModelContainer" connectionString="metadata=res://*/DAC.EF.DailySoccerModel.csdl|res://*/DAC.EF.DailySoccerModel.ssdl|res://*/DAC.EF.DailySoccerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:dailysoccer.database.windows.net,1433;Database=DAILYSOCCER_V0090;User ID=databaseadmin@dailysoccer;Password=databaseP@ssw0rd;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="DailySoccerModelContainer" connectionString="metadata=res://*/DAC.EF.DailySoccerModel.csdl|res://*/DAC.EF.DailySoccerModel.ssdl|res://*/DAC.EF.DailySoccerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:dailysoccerdbserver.database.windows.net,1433;Database=DAILYSOCCER_V0090;User ID=databaseadmin@dailysoccer;Password=databaseP@ssw0rd;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="PreserveLoginUrl" value="true" />
