Implement first scenario for BuyTicket complete.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
@@ -55,9 +55,11 @@
     <Compile Include="Shared\DAC\AccountDataAccess.cs" />
     <Compile Include="Shared\DAC\IAccountDataAccess.cs" />
     <Compile Include="Shared\DAC\IMatchDataAccess.cs" />
+    <Compile Include="Shared\DAC\ITicketDataAccess.cs" />
     <Compile Include="Shared\DAC\MatchDataAccess.cs" />
     <Compile Include="Shared\DAC\IRewardDataAccess.cs" />
     <Compile Include="Shared\DAC\RewardDataAccess.cs" />
+    <Compile Include="Shared\DAC\TicketDataAccess.cs" />
     <Compile Include="Shared\Facades\AccountFacade.cs" />
     <Compile Include="Shared\Facades\FacadeRepository.cs" />
     <Compile Include="Shared\Facades\MatchFacade.cs" />
