--- a/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Specs\Steps\BackgroundSteps.cs" />
     <Compile Include="Specs\Steps\BuyTicketSteps.cs" />
     <Compile Include="Specs\Steps\CommonSetup.cs" />
+    <Compile Include="Specs\Steps\ConfirmPhoneNumberSteps.cs" />
     <Compile Include="Specs\Steps\CreateNewGuestSteps.cs" />
     <Compile Include="Specs\Steps\CreateNewRewardGroupSteps.cs" />
     <Compile Include="Specs\Steps\GetAllGuessHistorySteps.cs" />
