--- a/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
+++ b/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
@@ -75,6 +75,9 @@
     <Compile Include="DAC\EF\GuessMatch.cs">
       <DependentUpon>DailySoccerModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAC\EF\GuestAccount.cs">
+      <DependentUpon>DailySoccerModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAC\EF\Match.cs">
       <DependentUpon>DailySoccerModel.tt</DependentUpon>
     </Compile>
