Implement first scenario for Calculate game result complete.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
@@ -137,6 +137,7 @@
     </Compile>
     <Compile Include="Specs\Steps\BackgroundSteps.cs" />
     <Compile Include="Specs\Steps\BuyTicketSteps.cs" />
+    <Compile Include="Specs\Steps\CalculateGameResultSteps.cs" />
     <Compile Include="Specs\Steps\CommonSetup.cs" />
     <Compile Include="Specs\Steps\ConfirmPhoneNumberSteps.cs" />
     <Compile Include="Specs\Steps\CreateNewGuestSteps.cs" />
