--- a/src/DailySoccerSolution/DailySoccer.Shared/packages.config
+++ b/src/DailySoccerSolution/DailySoccer.Shared/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.2" targetFramework="net452" />
+  <package id="Twilio" version="4.4.1" targetFramework="net452" />
 </packages>
