--- a/src/DailySoccerSolution/DailySoccerAppService/packages.config
+++ b/src/DailySoccerSolution/DailySoccerAppService/packages.config
@@ -36,6 +36,8 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="RazorEngine" version="3.7.0" targetFramework="net46" />
+  <package id="RestSharp" version="105.2.2" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.205111437" targetFramework="net46" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net46" />
+  <package id="Twilio" version="4.4.1" targetFramework="net46" />
 </packages>
