Add Winner service
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerAppService/DailySoccerAppService.csproj
+++ b/src/DailySoccerSolution/DailySoccerAppService/DailySoccerAppService.csproj
@@ -240,6 +240,7 @@
     <Compile Include="Controllers\RewardController.cs" />
     <Compile Include="Controllers\TestAPIController.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
+    <Compile Include="Controllers\WinnerController.cs" />
     <Compile Include="DataObjects\TodoItem.cs" />
     <Compile Include="Models\MobileServiceContext.cs" />
     <Compile Include="Global.asax.cs">
