--- a/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
@@ -63,10 +63,12 @@
     <Compile Include="Shared\DAC\AccountDataAccess.cs" />
     <Compile Include="Shared\DAC\IAccountDataAccess.cs" />
     <Compile Include="Shared\DAC\IMatchDataAccess.cs" />
+    <Compile Include="Shared\DAC\IWinnerDataAccess.cs" />
     <Compile Include="Shared\DAC\ITicketDataAccess.cs" />
     <Compile Include="Shared\DAC\MatchDataAccess.cs" />
     <Compile Include="Shared\DAC\IRewardDataAccess.cs" />
     <Compile Include="Shared\DAC\RewardDataAccess.cs" />
+    <Compile Include="Shared\DAC\WinnerDataAccess.cs" />
     <Compile Include="Shared\DAC\TicketDataAccess.cs" />
     <Compile Include="Shared\Facades\AccountFacade.cs" />
     <Compile Include="Shared\Facades\FacadeRepository.cs" />
@@ -74,8 +76,11 @@
     <Compile Include="Shared\Facades\MatchFacade.cs" />
     <Compile Include="Shared\Facades\PhoneVerificationFacade.cs" />
     <Compile Include="Shared\Facades\RewardFacade.cs" />
+    <Compile Include="Shared\Facades\WinnerFacade.cs" />
     <Compile Include="Shared\Facades\TicketFacade.cs" />
     <Compile Include="Shared\Facades\TwilioSMSSender.cs" />
+    <Compile Include="Shared\Models\GetSelectedTicketRespond.cs" />
+    <Compile Include="Shared\Models\TicketInformation.cs" />
     <Compile Include="Shared\Models\AccountInformation.cs" />
     <Compile Include="Shared\Models\BuyTicketRequest.cs" />
     <Compile Include="Shared\Models\BuyTicketRespond.cs" />
