Implement select winner
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerBackoffice/DailySoccerBackoffice.csproj
+++ b/src/DailySoccerSolution/DailySoccerBackoffice/DailySoccerBackoffice.csproj
@@ -311,10 +311,13 @@
     <Content Include="Views\Reward\Index.cshtml" />
     <Content Include="Views\Reward\Create.cshtml" />
     <Content Include="Views\Reward\Delete.cshtml" />
-    <Content Include="Views\Reward\Details.cshtml" />
     <Content Include="Views\Reward\Edit.cshtml" />
     <Content Include="Views\Reward\CreateReward.cshtml" />
     <Content Include="Views\Winner\Index.cshtml" />
+    <Content Include="Views\Shared\RewardList.cshtml" />
+    <Content Include="Views\Reward\RewardList.cshtml" />
+    <Content Include="Views\Winner\RewardList.cshtml" />
+    <Content Include="Views\Winner\ManageTicket.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
