--- a/src/DailySoccerSolution/DailySoccerAppService/DailySoccerAppService.csproj
+++ b/src/DailySoccerSolution/DailySoccerAppService/DailySoccerAppService.csproj
@@ -252,7 +252,9 @@
     <Content Include="Global.asax" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
